Updated readme for signed module
We can now sign modules so there is no need to have the debug mode enabled